@@ -38,7 +38,7 @@
 			Ext.apply(this, configuration); // Apply configurations
 
 			Ext.ns('CMDBuild.configuration');
-			CMDBuild.configuration.instance = Ext.create('CMDBuild.model.core.configurations.builder.Instance'); // Setup configuration with defaults
+			CMDBuild.configuration.instance = Ext.create('CMDBuild.model.core.configurations.builder.Instance'); // Instance configuration model with defaults
 
 			if (this.enableServerCalls) {
 				CMDBuild.proxy.core.configurations.builder.Instance.read({
@@ -51,8 +51,8 @@
 					},
 					callback: this.callback
 				});
-			} else { // Instance configuration model with defaults
-				CMDBuild.configuration.instance = Ext.create('CMDBuild.model.core.configurations.builder.Instance');
+			} else {
+				Ext.callback(this.callback, this.scope || this);
 			}
 		}
 	});
