@@ -22,6 +22,8 @@ FIXES
 
  * Error while editing icon from administration class edit form
 
+ * Login page errors
+
 
 
 
